gccida/c0/dbxout_symbol_location
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_symbol_location/src/dbxout.c:2600:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *subtype; // [rsp+28h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_symbol_location/src/dbxout.c:2647:39: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( !decla->decl.initial || !strcmp( lang_hooks_0.name, "GNU C++") && decla->decl.initial == ( tree)global_trees ) 
                                      ^~~~~~~~~~~~
                                      lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_symbol_location/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_symbol_location/src/obj/dbxout.o] Error 1
